force-app/main/default/objects/Price_Data__c/Price_Data__c.object-meta.xml
<CustomObject>
    <label>Price Data</label>
    <nameField>
        <displayFormat>Price Data - {00000}</displayFormat>
        <label>Price Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>