force-app/main/default/objects/Price_Data__c/fields/Charger_Interface_s__c.field-meta.xml
<CustomField>
    <fullName>Charger_Interface_s__c</fullName>
    <label>Charger Interface(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) J1772 CCS-1 Connection</fullName>
            </value>
            <value>
                <fullName>(2) J1772 CCS-1 Connections</fullName>
            </value>
            <value>
                <fullName>(1) J1772 CCS-1 Connection and Overhead Charge Rails</fullName>
            </value>
            <value>
                <fullName>(2) J1772 CCS-1 Connections and Overhead Charge Rails</fullName>
            </value>
            <value>
                <fullName>(1) J1772 CCS-1 Connection and Bus-Up Pantograph</fullName>
            </value>
            <value>
                <fullName>(1) J1772 CCS-1 Connection and WAVE Inductive Charging</fullName>
            </value>
            <value>
                <fullName>(1) J1772 CCS-1 Connection and Momentum Dynamics Inductive Charging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>