force-app/main/default/objects/Price_Data__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Price Data</relationshipLabel>
    <relationshipName>Price_Data</relationshipName>
    <type>Lookup</type>
</CustomField>