force-app/main/default/objects/Price_Data__c/fields/Customer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Price Data</relationshipLabel>
    <relationshipName>Price_Data</relationshipName>
    <type>Lookup</type>
</CustomField>