force-app/main/default/objects/Price_Data__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>