force-app/main/default/objects/Price_Data__c/fields/ESS_Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>ESS_Warranty_Term__c</fullName>
    <label>ESS Warranty Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Years, Unlimited Miles</fullName>
            </value>
            <value>
                <fullName>6 Years, 300,000 Miles</fullName>
            </value>
            <value>
                <fullName>12 Years, 500,000 Miles</fullName>
            </value>
            <value>
                <fullName>6 Years, 4500 Cycles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>