force-app/main/default/objects/Price_Data__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>