force-app/main/default/objects/Price_Data__c/fields/On_Board_Energy_kWh__c.field-meta.xml
<CustomField>
    <fullName>On_Board_Energy_kWh__c</fullName>
    <label>On-Board Energy (kWh)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>