force-app/main/default/objects/Price_Data__c/fields/Usable_Energy__c.field-meta.xml
<CustomField>
    <fullName>Usable_Energy__c</fullName>
    <label>Usable Energy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>