force-app/main/default/objects/Price_Data__c/fields/Warrantable_EOL__c.field-meta.xml
<CustomField>
    <fullName>Warrantable_EOL__c</fullName>
    <label>Warrantable EOL %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>