force-app/main/default/objects/Price_Data__c/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <description>Competitor Pricing Data</description>
    <label>Competitor</label>
</RecordType>