force-app/main/default/objects/Price_Data__c/recordTypes/GILLIG.recordType-meta.xml
<RecordType>
    <fullName>GILLIG</fullName>
    <active>true</active>
    <description>GILLIG Pricing</description>
    <label>GILLIG</label>
</RecordType>