force-app/main/default/objects/Price_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Contract__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Competitor__c</columns>
    <columns>Length__c</columns>
    <columns>Mode__c</columns>
    <columns>Price__c</columns>
    <columns>Delivery__c</columns>
    <columns>Gross_Margin__c</columns>
    <columns>On_Board_Energy_kWh__c</columns>
    <columns>Usable_Energy__c</columns>
    <columns>ESS_Warranty_Term__c</columns>
    <columns>Warrantable_EOL__c</columns>
    <columns>Charger_Interface_s__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>